--- a/articles/article1/.vscode/settings.json
+++ b/articles/article1/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "D:\\python3_8\\python.exe"
+    "python.pythonPath": "D:\\python3_8\\python.exe",
+    "cSpell.language": "en, ru"
 }
